--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "~2.1",
-        "jms/payment-core-bundle": "~1.0"
+        "symfony/framework-bundle": ">=2.1",
+        "jms/payment-core-bundle": "<1.3"
     },
     "extra": {
         "branch-alias": {
