--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Symfony2 bundle for providing access to Saferpay. This is an extension to the JMSCorePaymentBundle.",
     "type": "symfony-bundle",
     "keywords": ["payment","saferpay"],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "license": "MIT",
     "authors": [
         {
@@ -17,8 +17,9 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.1",
-        "jms/payment-core-bundle": "<1.3"
+        "symfony/framework-bundle": "^2.1|^3.4",
+        "jms/payment-core-bundle": "<1.3",
+        "guzzle/guzzle": "^3.9"
     },
     "extra": {
         "branch-alias": {
