--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": "^2.1|^3.4",
         "jms/payment-core-bundle": "<1.3",
-        "guzzle/guzzle": "^3.9"
+        "guzzlehttp/guzzle": "^6.4"
     },
     "extra": {
         "branch-alias": {
@@ -31,4 +31,3 @@
     },
     "target-dir": "Ongoing/Payment/SaferpayBundle"
 }
-
