--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "^2.1|^3.4",
-        "jms/payment-core-bundle": "<1.3",
+        "jms/payment-core-bundle": "^1.3",
         "guzzlehttp/guzzle": "^6.4"
     },
     "extra": {
