--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=7.4",
-        "symfony/framework-bundle": "^2.1|^3.4",
+        "symfony/framework-bundle": "^4.4",
         "jms/payment-core-bundle": "^1.3",
         "guzzlehttp/guzzle": "^6.4"
     },
