--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=7.4",
         "symfony/framework-bundle": "^5.4",
-        "jms/payment-core-bundle": "^1.3",
+        "jms/payment-core-bundle": "*",
         "guzzlehttp/guzzle": "^6.4"
     },
     "autoload": {
